[package]
name = "centipede"
version = "0.2.13"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
serde_derive = "1.0"
serde = "1.0"
rayon = "1.0.3"

[dependencies.bulletproof]
git = "https://github.com/KZen-networks/bulletproofs"
tag = "v1.1.6"
default-features = false

[dependencies.curv]
git = "https://github.com/ben-falconx/curv"
default-features = false
tag = "v0.7.2"

[dev-dependencies]
criterion = "0.2"

[features]
default = ["curv/rust-gmp-kzen"]

[[bench]]
name = "v_backup"
path = "benches/v_backup.rs"
harness = false

